--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,20 +1,14 @@
-<html>
-<head>
-       <title>Moja strona <3 </title>
-   </head>
-   <body>
-       <div>
-           <h1> <a href="">Moja strona</a> </h1>
-       </div>
+{% extends 'blog/base.html' %}
 
-       <div>
-          {% for post in posts %}
-       </div>
-            <h1><a href="">{{ post.title }}</a></h1>
-            <p>Opublikowany: {{ post.published_date }}</p>
-            <p>{{ post.text|linebreaksbr }}</p>
-        </div>
-          {% endfor %}
+{% block content %}
 
-   </body>
-</html>
+         {% for post in posts %}
+             <div class="post">
+                 <div class="date">
+                     {{ post.published_date }}
+                 </div>
+                 <h2><a href="{% url 'post_detail' pk=post.pk %}">{{ post.title }}</a></h2>
+                 <p>{{ post.text|linebreaksbr }}</p>
+             </div>
+         {% endfor %}
+     {% endblock content %}
